Bug fix? Move --add-opens to argLine subtag in pom9.xml